--- a/research.html
+++ b/research.html
@@ -430,8 +430,10 @@ Workweek Law coming soon.</h4>
 <div
 id="the-effects-of-fair-workweek-laws-on-store-performance-evidence-from-chicago-and-los-angeles-with-ananth-raman."
 class="section level2">
-<h2>9. <a href="">The Effects of Fair Workweek Laws on Store
-Performance: Evidence from Chicago and Los Angeles</a> with <a
+<h2>9. <a
+href="https://www.dropbox.com/scl/fi/i1enwo8gpwxbvief4cizz/Chicago_FW.pdf?rlkey=qirv2am8zm7yup75aac4sv4hx&amp;raw=1">The
+Effects of Fair Workweek Laws on Store Performance: Evidence from
+Chicago and Los Angeles</a> with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
 <div
@@ -443,6 +445,17 @@ soon.</h4>
 </div>
 <div id="first-draft-november-21-2022." class="section level4">
 <h4>First Draft: November 21, 2022.</h4>
+</div>
+<div
+id="note-august-23-2023.-this-paper-was-originally-taken-down-because-the-corresponding-author-caleb-kwon-wanted-to-present-results-that-included-more-data-from-additional-retailers-and-also-include-los-angeles-fair-workweek-law-to-make-the-analyses-more-comprehensive.-however-this-paper-has-now-been-reuploaded-due-to-the-existance-of-articles-published-after-the-original-upload-date-of-this-paper.-the-unchanged-version-from-november-21-2022-is-presented-above."
+class="section level4">
+<h4>Note (August 23, 2023). This paper was originally taken down because
+the corresponding author (Caleb Kwon) wanted to present results that
+included more data from additional retailers and also include Los
+Angeles’ Fair Workweek law to make the analyses more comprehensive.
+However, this paper has now been reuploaded due to the existance of
+articles published after the original upload date of this paper. The
+unchanged version from November 21, 2022 is presented above.</h4>
 <hr />
 </div>
 </div>
