--- a/research.html
+++ b/research.html
@@ -446,16 +446,11 @@ soon.</h4>
 <div id="first-draft-november-21-2022." class="section level4">
 <h4>First Draft: November 21, 2022.</h4>
 </div>
-<div
-id="note-august-23-2023.-this-paper-was-originally-taken-down-because-the-corresponding-author-caleb-kwon-wanted-to-present-results-that-included-more-data-from-additional-retailers-and-also-include-los-angeles-fair-workweek-law-to-make-the-analyses-more-comprehensive.-however-this-paper-has-now-been-reuploaded-due-to-the-existance-of-articles-published-after-the-original-upload-date-of-this-paper.-the-unchanged-version-from-november-21-2022-is-presented-above."
-class="section level4">
-<h4>Note (August 23, 2023). This paper was originally taken down because
-the corresponding author (Caleb Kwon) wanted to present results that
-included more data from additional retailers and also include Los
-Angeles’ Fair Workweek law to make the analyses more comprehensive.
-However, this paper has now been reuploaded due to the existance of
-articles published after the original upload date of this paper. The
-unchanged version from November 21, 2022 is presented above.</h4>
+<div id="ssrn-link" class="section level4">
+<h4><a
+href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4351186">SSRN
+Link</a></h4>
+<!-- #### Note (August 23, 2023). This paper was originally taken down because the corresponding author (Caleb Kwon) wanted to present results that included more data from additional retailers and also include Los Angeles' Fair Workweek law to make the analyses more comprehensive. However, this paper has now been reuploaded due to the existance of articles published after the original upload date of this paper. The unchanged version from November 21, 2022 is presented above.  -->
 <hr />
 </div>
 </div>
