--- a/index.html
+++ b/index.html
@@ -355,14 +355,18 @@ University. I am advised by Professor <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</p>
 <p><strong>I am on the 2023-2024 Job Market. I will be available for
-interviews at INFORMS 2023.</strong></p>
-<p>My research investigates the connections between managerial talent,
+interviews at INFORMS 2023. I will be presenting at session SB27 held in
+CC-North 131C on October 15th 10:45AM – 12:00PM.</strong></p>
+<p>My research investigates the connections between managerial ability,
 labor scheduling decisions, automation, and firm performance. For more
 details on my papers, please visit the <a
 href="https://calebkwon.com/research.html">Research Section</a> of my
-website. As part of my research, I also work as a consultant for a major
-technology company that creates and offers algorithmic solutions to
-firms across various industries.</p>
+website. As part of my research, I also work as a data consultant for a
+major technology company that creates and offers algorithmic solutions
+to firms across various industries. I collaborate with this company to
+empirically study how managers interact with AI tools that forecast
+demand and schedule labor using data from tens of thousands of retail
+stores across the world.</p>
 <p>During my PhD, I have participated in multiple teaching roles. At
 Harvard, I have been a teaching fellow in the full-time MBA program at
 HBS and acted as an executive coach in the <a
