--- a/index.html
+++ b/index.html
@@ -361,9 +361,10 @@ CC-North 131C on October 15th 10:45AM – 12:00PM.</strong></p>
 labor scheduling decisions, automation, and firm performance. For more
 details on my papers, please visit the <a
 href="https://calebkwon.com/research.html">Research Section</a> of my
-website. As part of my research, I also work as a data consultant for a
-major technology company that creates and offers algorithmic solutions
-to firms across various industries. I collaborate with this company to
+website.</p>
+<p>As part of my research, I also work as a data consultant for a major
+technology company that creates and offers algorithmic solutions to
+firms across various industries. I collaborate with this company to
 empirically study how managers interact with AI tools that forecast
 demand and schedule labor using data from tens of thousands of retail
 stores across the world.</p>
