--- a/research.html
+++ b/research.html
@@ -353,8 +353,9 @@ of Sustainable Operations, Best Student Paper Competition</a></h3>
 <div
 id="the-effects-of-inconsistent-work-schedules-on-employe-lateness-and-absenteeism-2023-with-ananth-raman."
 class="section level2">
-<h2>4. <a href="">The Effects of Inconsistent Work Schedules on Employe
-Lateness and Absenteeism</a> (2023) with <a
+<h2>4. <a href="https://ssrn.com/abstract=4592763">The Effects of
+Inconsistent Work Schedules on Employe Lateness and Absenteeism</a>
+(2023) with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
 <div id="under-review-at-manufacturing-service-operations-management"
