--- a/research.html
+++ b/research.html
@@ -455,6 +455,18 @@ Link</a></h4>
 <hr />
 </div>
 </div>
+<div
+id="the-impact-of-input-inaccuracy-on-leveraging-ai-tools-evidence-from-algorithmic-labor-scheduling-2023-with-ananth-raman-and-antonio-moreno."
+class="section level2">
+<h2>10. <a href="https://papers.ssrn.com/abstract=4602747">The Impact of
+Input Inaccuracy on Leveraging AI Tools: Evidence from Algorithmic Labor
+Scheduling</a> (2023) with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a> and <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325">Antonio
+Moreno</a>.</h2>
+<hr />
+</div>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
 <h1>Cases and Teaching Material:</h1>
