--- a/index.html
+++ b/index.html
@@ -362,12 +362,19 @@ labor scheduling decisions, automation, and firm performance. For more
 details on my papers, please visit the <a
 href="https://calebkwon.com/research.html">Research Section</a> of my
 website.</p>
-<p>As part of my research, I also work as a data consultant for a major
-technology company that creates and offers algorithmic solutions to
-firms across various industries. I collaborate with this company to
-empirically study how managers interact with AI tools that forecast
-demand and schedule labor using data from tens of thousands of retail
-stores across the world.</p>
+<p>As part of my research, I also work as a consultant for a tech
+company that develops and offers commercial AI tools to firms across
+various industries. I work for, and collaborate with this company, to
+empirically study the use of AI tools that automate a variety of
+business operations (e.g., demand forecasting, labor scheduling,
+inventory management). Some questions include:</p>
+<ol style="list-style-type: decimal">
+<li>What are the effects of such AI tools on store performance?</li>
+<li>How do managers interact with AI tools? What are some of the
+challenges in this interaction?</li>
+<li>What guidance and training can we provide managers to better utilize
+such tools?</li>
+</ol>
 <p>During my PhD, I have participated in multiple teaching roles. At
 Harvard, I have been a teaching fellow in the full-time MBA program at
 HBS and acted as an executive coach in the <a
