--- a/research.html
+++ b/research.html
@@ -453,19 +453,9 @@ href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4351186">SSRN
 Link</a></h4>
 <!-- #### Note (August 23, 2023). This paper was originally taken down because the corresponding author (Caleb Kwon) wanted to present results that included more data from additional retailers and also include Los Angeles' Fair Workweek law to make the analyses more comprehensive. However, this paper has now been reuploaded due to the existance of articles published after the original upload date of this paper. The unchanged version from November 21, 2022 is presented above.  -->
 <hr />
+<!-- ## 10. [The Impact of Input Inaccuracy on Leveraging AI Tools: Evidence from Algorithmic Labor Scheduling](https://papers.ssrn.com/abstract=4602747) (2023) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534) and [Antonio Moreno](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325).  -->
+<!-- --- -->
 </div>
-</div>
-<div
-id="the-impact-of-input-inaccuracy-on-leveraging-ai-tools-evidence-from-algorithmic-labor-scheduling-2023-with-ananth-raman-and-antonio-moreno."
-class="section level2">
-<h2>10. <a href="https://papers.ssrn.com/abstract=4602747">The Impact of
-Input Inaccuracy on Leveraging AI Tools: Evidence from Algorithmic Labor
-Scheduling</a> (2023) with <a
-href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
-Raman</a> and <a
-href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325">Antonio
-Moreno</a>.</h2>
-<hr />
 </div>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
