--- a/index.html
+++ b/index.html
@@ -354,9 +354,6 @@ $(document).ready(function () {
 University. I am advised by Professor <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</p>
-<p><strong>I am on the 2023-2024 Job Market. I will be available for
-interviews at INFORMS 2023. I will be presenting at session SB27 held in
-CC-North 131C on October 15th 10:45AM – 12:00PM.</strong></p>
 <p>My research investigates the connections between managerial ability,
 labor scheduling decisions, automation, and firm performance. For more
 details on my papers, please visit the <a
@@ -371,7 +368,9 @@ inventory management). Some questions include:</p>
 <ol style="list-style-type: decimal">
 <li>What are the effects of such AI tools on store performance?</li>
 <li>How do managers interact with AI tools? What are some of the
-challenges in this interaction?</li>
+challenges in this interaction? For instance, how “large” is the
+phenomenon of “algorithm aversion” in the field with experienced and
+trained store managers?</li>
 <li>What guidance and training can we provide managers to better utilize
 such tools?</li>
 </ol>
