--- a/research.html
+++ b/research.html
@@ -407,25 +407,24 @@ Raman</a>.</h2>
 <!-- --- -->
 </div>
 <div
-id="the-effects-of-fair-workweek-laws-on-worker-schedules-evidence-from-chicago-2023-with-ananth-raman."
+id="the-real-effects-of-fair-workweek-laws-on-work-schedules-evidence-from-chicago-los-angeles-and-philadelphia-2023-with-ananth-raman."
 class="section level2">
-<h2>8. <a
-href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4542956">The
-Effects of Fair Workweek Laws on Worker Schedules: Evidence from
-Chicago</a> (2023) with <a
+<h2>8. <a href="https://papers.ssrn.com/abstract=4609755">The Real
+Effects of Fair Workweek Laws on Work Schedules: Evidence from Chicago,
+Los Angeles, and Philadelphia</a> (2023) with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
 <div id="rejected-with-invitation-to-resubmit-at-management-science"
 class="section level3">
 <h3>Rejected, with invitation to Resubmit at <strong>Management
 Science</strong></h3>
-<div
-id="note-new-results-that-include-results-from-los-angeles-fair-workweek-law-coming-soon."
-class="section level4">
-<h4>Note: New results that include results from Los Angeles’ Fair
-Workweek Law coming soon.</h4>
-<hr />
 </div>
+<div id="older-draft-with-just-chicago-results-here"
+class="section level3">
+<h3><a
+href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4542956">Older
+draft with just Chicago results here</a></h3>
+<hr />
 </div>
 </div>
 <div
@@ -453,9 +452,19 @@ href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4351186">SSRN
 Link</a></h4>
 <!-- #### Note (August 23, 2023). This paper was originally taken down because the corresponding author (Caleb Kwon) wanted to present results that included more data from additional retailers and also include Los Angeles' Fair Workweek law to make the analyses more comprehensive. However, this paper has now been reuploaded due to the existance of articles published after the original upload date of this paper. The unchanged version from November 21, 2022 is presented above.  -->
 <hr />
-<!-- ## 10. [The Impact of Input Inaccuracy on Leveraging AI Tools: Evidence from Algorithmic Labor Scheduling](https://papers.ssrn.com/abstract=4602747) (2023) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534) and [Antonio Moreno](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325).  -->
-<!-- --- -->
 </div>
+</div>
+<div
+id="the-impact-of-input-inaccuracy-on-leveraging-ai-tools-evidence-from-algorithmic-labor-scheduling-2023-with-ananth-raman-and-antonio-moreno."
+class="section level2">
+<h2>10. <a href="https://papers.ssrn.com/abstract=4602747">The Impact of
+Input Inaccuracy on Leveraging AI Tools: Evidence from Algorithmic Labor
+Scheduling</a> (2023) with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a> and <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325">Antonio
+Moreno</a>.</h2>
+<hr />
 </div>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
