--- a/codes.html
+++ b/codes.html
@@ -323,7 +323,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img id="logo" style="width: 100px;" src="hbs.jpg" /></a>
+      <a class="navbar-brand" href="index.html"><img id="logo" style="width: 250px;" src="mccombs_full.jpg" /></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -339,7 +339,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:ckwon@hbs.edu">
+  <a href="mailto:calebkwon93@gmail.com">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
