--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img id="logo" style="width: 100px;" src="hbs.jpg" /></a>
+      <a class="navbar-brand" href="index.html"><img id="logo" style="width: 250px;" src="mccombs_full.jpg" /></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -257,7 +257,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:ckwon@hbs.edu">
+  <a href="mailto:calebkwon93@gmail.com">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
@@ -350,34 +350,20 @@ $(document).ready(function () {
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I’m a 5th year PhD Candidate in Operations Management at Harvard
-University. I am advised by Professor <a
-href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
-Raman</a>.</p>
-<p>My research investigates the connections between managerial ability,
-labor scheduling decisions, automation, and firm performance. For more
-details on my papers, please visit the <a
-href="https://calebkwon.com/research.html">Research Section</a> of my
-website.</p>
-<p>During my PhD, I have participated in multiple teaching roles. At
-Harvard, I have been a teaching fellow in the full-time MBA program at
-HBS and acted as an executive coach in the <a
-href="https://www.exed.hbs.edu/leadership-development/">Program For
-Leadership Development Executive Education program</a>. I have also
-served as a teaching fellow in the Executive Education Program at the
-Booth School of Business (London and Hong Kong) at the University of
-Chicago. Additionally, I am an MBA course instructor at Boston College
-Carroll School of Management, where I teach data science and coding for
-business.</p>
-<p>Prior to Harvard, I received a B.A. in Economics from Simon Fraser
-University, and an M.A in Economics from Northwestern University.</p>
+<p>I’m an incoming Assistant Professor in the <a
+href="https://www.mccombs.utexas.edu/faculty-and-research/departments/irom/">Information,
+Risk, and Operations Management Department</a> at the University of
+Texas, McCombs School of Business. Currently, I am a PhD student at
+Harvard Business School, and I expect to graduate in May, 2024.</p>
+<p>My research interests are in empirical Operations Management. Some of
+my recent research has examined the effects of Fair Workweek Laws and
+the effects of automation in retail. For more details on my papers,
+please visit the <a href="https://calebkwon.com/research.html">Research
+Section</a> of my website.</p>
 </div>
 <div id="about-me" class="section level1">
 <h1>About Me:</h1>
 <ul>
-<li><a
-href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260">Harvard
-Business School Profile</a></li>
 <li><a href="https://calebkwon.com/CV.html">Curriculum
 Vitae/Resume</a></li>
 <li><a
