--- a/teaching.html
+++ b/teaching.html
@@ -241,7 +241,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img id="logo" style="width: 100px;" src="hbs.jpg" /></a>
+      <a class="navbar-brand" href="index.html"><img id="logo" style="width: 250px;" src="mccombs_full.jpg" /></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -257,7 +257,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:ckwon@hbs.edu">
+  <a href="mailto:calebkwon93@gmail.com">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
