--- a/index.html
+++ b/index.html
@@ -352,9 +352,10 @@ $(document).ready(function () {
 <h1>Caleb Kwon</h1>
 <p>I’m an incoming Assistant Professor in the <a
 href="https://www.mccombs.utexas.edu/faculty-and-research/departments/irom/">Information,
-Risk, and Operations Management Department</a> at the University of
-Texas, McCombs School of Business. Currently, I am a PhD student at
-Harvard Business School, and I expect to graduate in May, 2024.</p>
+Risk, and Operations Management Department</a> within the McCombs School
+of Business at the University of Texas at Austin. Currently, I am a PhD
+student at Harvard Business School, and I expect to graduate in May,
+2024.</p>
 <p>My research interests are in empirical Operations Management. Some of
 my recent research has examined the effects of Fair Workweek Laws and
 the effects of automation in retail. For more details on my papers,
