--- a/research.html
+++ b/research.html
@@ -370,8 +370,10 @@ Management</strong></h3>
 <div
 id="human-computer-interactions-in-demand-forecasting-and-labor-scheduling-decisions-2022-with-ananth-raman-and-jorge-tamayo"
 class="section level2">
-<h2>5. <a href="">Human-Computer Interactions in Demand Forecasting and
-Labor Scheduling Decisions</a> (2022) with <a
+<h2>5. <a
+href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4773773">Human-Computer
+Interactions in Demand Forecasting and Labor Scheduling Decisions</a>
+(2022) with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a> and <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge
